# robot_system

./: .gitignore  .gitmodules  README.md  localization.sh  odom_data.txt  path.sh  rviz2.sh  simple_simulation.py  simulation.sh  teleop.sh  view_curve.m
maps/: factory.pgm  factory.yaml  mapper_params_online_sync.yaml
maps/bot_map/: map_list.yaml
maps/bot_map/1717573160772/: MAP_-1A楼地图_1717573160.pgm  MAP_-1A楼地图_1717573160.yaml  charger_stations.json  clear_area.json  elevator_stations.json  map_version.json  navigation_stations.json
maps/bot_map/1721110225254/: MAP_20floor_1721110405.pgm  MAP_20floor_1721110405.yaml  clear_area.json  elevator_stations.json  fire_door_stations.json  map_version.json  navigation_stations.json  prohibited_areas.json  virtual_walls.json
maps/bot_map/1721115427108/: MAP_18floor_1721115607.pbstream  MAP_18floor_1721115607.pgm  MAP_18floor_1721115607.yaml  clear_area.json  elevator_stations.json  fire_door_stations.json  map_version.json  navigation_stations.json  prohibited_areas.json  virtual_walls.json
maps/bot_map/1721116860661/: MAP_17floor_1721117041.pgm  MAP_17floor_1721117041.yaml  clear_area.json  elevator_stations.json  fire_door_stations.json  map_version.json  navigation_stations.json  virtual_walls.json
maps/bot_map/1721118128058/: MAP_16floor_1721118309.pbstream  MAP_16floor_1721118309.pgm  MAP_16floor_1721118309.yaml  await_orders_stations.json  charger_stations.json  clear_area.json  elevator_stations.json  fire_door_stations.json  map_version.json  navigation_stations.json  prohibited_areas.json  virtual_walls.json
maps/bot_map/1721902419607/: MAP_19floor_1721902305.pgm  MAP_19floor_1721902305.yaml  clear_area.json  elevator_stations.json  fire_door_stations.json  map_version.json  navigation_stations.json  prohibited_areas.json  virtual_walls.json
maps/bot_map/1721978946014/: MAP_21floor_1721978829.pgm  MAP_21floor_1721978829.yaml  elevator_stations.json  gate_stations.json  map_version.json  navigation_stations.json
maps/hb_map/: map_list.yaml
maps/hb_map/1709870483105/: MAP_release1.4.3_0308_1709870471.pgm  MAP_release1.4.3_0308_1709870471.yaml  await_orders_stations.json  charger_stations.json  clear_area.json  elevator_stations.json  gate_stations.json  map_version.json  navigation_stations.json  prohibited_areas.json  speedlimit_area.json  virtual_walls.json
maps/hb_map/1709877929284/: MAP_19floor_release1.4.3_0308_1709877917.pbstream  MAP_19floor_release1.4.3_0308_1709877917.pgm  MAP_19floor_release1.4.3_0308_1709877917.yaml  await_orders_stations.json  clear_area.json  elevator_stations.json  fire_door_stations.json  map_version.json  navigation_stations.json
maps/hb_map/1709879272326/: MAP_1floor_release1.4.3_0308_1709879260.pgm  MAP_1floor_release1.4.3_0308_1709879260.yaml  clear_area.json  elevator_stations.json  fire_door_stations.json  map_version.json  navigation_stations.json  virtual_walls.json
nav2_amcl/: CMakeLists.txt
nav2_amcl/config/: hb.yaml
nav2_amcl/launch/: amcl.launch.py  amcl_hb.launch.py
nav2_amcl/src/: amcl_node.cpp
rosbag2_2024_08_13-18_24_46/: metadata.yaml
rosbag2_2024_09_03-16_40_00/: metadata.yaml  rosbag2_2024_09_03-16_40_00_0.db3
src/algorithm/Path/Doc/: path.md
src/algorithm/Path/path_tool/: CMakeLists.txt  package.xml
src/algorithm/Path/path_tool/include/path_tool/: path_tool.hpp
src/algorithm/Path/path_tool/launch/: path_tool.launch.py
src/algorithm/Path/path_tool/src/: main.cpp  path_tool.cpp
src/demo_unit/: ReadMe.md
src/demo_unit/odometry_covariance/: CMakeLists.txt  package.xml
src/demo_unit/sensor_data_info/: CMakeLists.txt  package.xml
src/demo_unit/spdlog_demo/: CMakeLists.txt  package.xml
src/demo_unit/spdlog_demo/include/spdlog_demo/: spdlog_demo.hpp
src/demo_unit/spdlog_demo/src/: main.cpp  spdlog_demo.cpp
src/laser/: ReadMe.md
src/laser/robot_conver_pcl/: CMakeLists.txt  package.xml
src/laser/robot_feature_detection/: CMakeLists.txt  package.xml
src/laser/robot_iterative_closest_point/: CMakeLists.txt  package.xml
src/laser/robot_laser_scan/: CMakeLists.txt  package.xml
src/laser/robot_pl_icp/: CMakeLists.txt  package.xml
src/laser/robot_plicp_odom/: CMakeLists.txt  package.xml
src/nav2_amcl/: CMakeLists.txt  package.xml
src/nav2_amcl/config/: hb.yaml  params.yaml
src/nav2_amcl/launch/: amcl.launch.py  amcl_hb.launch.py
src/nav2_amcl/src/: amcl_node.cpp
src/nav2_amcl/src/icp/: CMakeLists.txt  icp.cpp  plicp.cpp
src/robot_algorithm/path_tracking/: CMakeLists.txt  package.xml
src/robot_algorithm/path_tracking/config/: params.yaml
src/robot_algorithm/path_tracking/include/path_tracking/: path_tracking.hpp
src/robot_algorithm/path_tracking/include/path_tracking/math_library/: math_library.hpp
src/robot_algorithm/path_tracking/include/path_tracking/pure_pursuit/: pure_pursuit.hpp
src/robot_algorithm/path_tracking/launch/: path_tracking.launch.py
src/robot_algorithm/path_tracking/pure_pursuit/: CMakeLists.txt  package.xml
src/robot_algorithm/path_tracking/pure_pursuit/include/pure_pursuit/: pure_pursuit.hpp
src/robot_algorithm/path_tracking/pure_pursuit/src/: main.cpp  pure_pursuit.cpp
src/robot_algorithm/path_tracking/src/: main.cpp  path_tracking.cpp
src/robot_algorithm/path_tracking/src/math_library/: CMakeLists.txt  math_library.cpp
src/robot_algorithm/path_tracking/src/pure_pursuit/: CMakeLists.txt  pure_pursuit.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: PoseArray.msg  Vector3Array.msg
src/robot_path_creater/: CMakeLists.txt  ReadMe.md  package.xml
src/robot_path_creater/src/: curve_math.cpp  main.cpp  path_creater.cpp
src/robot_teleop/: CMakeLists.txt  package.xml  setup.py
src/tools/: ReadMe.md
src/tools/switch_map_unit_test/: CMakeLists.txt  package.xml
src/tools/switch_map_unit_test/include/switch_map_unit_test/: logger.hpp  switch_map_unit_test.hpp
src/tools/switch_map_unit_test/src/: change_state.cpp  main.cpp  switch_map_unit_test.cpp
switch_map_unit_test/: run_switch_map_unit_test.sh
user/: a.out  hardware.txt  static.cpp  tmp.cpp
(+510 files in other folders)
